# vgmms

./: Cargo.toml  README.md
data/: vgmms-daemon.desktop  vgmms.desktop
src/: chat.rs  chat_log.rs  db.rs  dbus.rs  file_chooser.rs  input_box.rs  main.rs  mmsd_manager.rs  mmsd_service.rs  new_chat.rs  new_custom.rs  ofono_manager.rs  ofono_simmanager.rs  once.rs  select_chat.rs  smil.rs  state.rs  types.rs  window.rs
