[package]
name = "vgmms"
version = "0.1.0"
authors = ["anteater"]
edition = "2018"

[dependencies]
vgtk = { git = "https://github.com/nt8r/vgtk/", branch="patch-2" }
pretty_env_logger = "0.4"
pango = "0.8"
futures = "*"
dbus = "0.8"
chrono = "0.4"
tree_magic = "0.2"
hex = "0.4"
memmap = "0.7"
rusqlite = "0.23"
byteorder = "1.3"
