[package]
name = "vgmms"
version = "0.1.0"
authors = ["anteater"]
edition = "2018"

[dependencies]
#patched until a released version contains a fix for https://github.com/gtk-rs/gtk/issues/1051
gtk = { git = "https://github.com/nt8r/gtk", branch = "0.9", features = ["embed-lgpl-docs", "v3_22"], version = "0.9.2" }

vgtk = { git = "https://github.com/nt8r/vgtk/", branch = "master" }
pretty_env_logger = "0.4"
pango = "0.9"
futures = "0.3"
dbus = "0.8"
chrono = "0.4"
tree_magic = "0.2"
hex = "0.4"
memmap = "0.7"
rusqlite = "0.23"
byteorder = "1.3"
rand = "0.6.5"
lazy_static = "1.4"
phonenumber = "0.2"
xdg-basedir = "1"

[patch.crates-io]
gtk = { git = "https://github.com/nt8r/gtk", branch = "0.9", features = ["embed-lgpl-docs", "v3_22"] }
